--- a/scss/sub/_gallery.scss
+++ b/scss/sub/_gallery.scss
@@ -108,7 +108,9 @@
             font: 12px/1.2 'arial';
             color: #777;
             margin-bottom: 30px;
-            transform: translateY(-100%);
+            //transform: translateY(-100%);
+            width: 100%;
+            padding: 0px 20px;
           }
 
           span {
@@ -119,7 +121,6 @@
               width: 60px;
               height: 60px;
               border-radius: 50%;
-              margin-right: 5px;
               padding: 4px;
               background: #fff;
             }
