--- a/scss/sub/_gallery.scss
+++ b/scss/sub/_gallery.scss
@@ -45,7 +45,7 @@
       &:hover {
         background: #fff;
         color: $pointColor;
-      }      
+      }
     }
   }
 
@@ -101,6 +101,7 @@
             >img {
               width: 100%;
               transition: 0.5s;
+              vertical-align: middle;
             }
           }
 
@@ -122,7 +123,6 @@
               border-radius: 50%;
               padding: 4px;
               background: #fff;
-              
             }
 
             strong {
@@ -173,7 +173,9 @@
     cursor: pointer;
 
     &:hover {
-      &::before, &::after {
+
+      &::before,
+      &::after {
         width: 100%;
       }
     }
@@ -203,7 +205,7 @@
   }
 }
 
-@media screen and (max-width: $tablet){
+@media screen and (max-width: $tablet) {
   .popImg {
     padding: 20vw 5vw;
 
