--- a/scss/main/_header.scss
+++ b/scss/main/_header.scss
@@ -30,6 +30,10 @@
         >li {
           float: left;
 
+          &.sns a {
+            padding: 14px 15px;
+          }
+
           >a {
             display: inline-block;
             position: relative;
@@ -57,198 +61,124 @@
               }
             }
           }
-
-          .menuSub {
-            width: 1180px;
-            height: 200px;
-            background: $defColor;
-            position: absolute;
-            top: 48px;
-            right: 0px;
-            transition: 0.5s;
-
-            >ul li a {
-              color: $subColor2;
-              display: block;
-              width: 200px;
-              height: 40px;
-              position: relative;
-
-              &:hover {
-                background: $themeColor;
-
-              }
-            }
-
-            &::before {
-              content: '';
-              display: block;
-              width: 2800px;
-              height: 200px;
-              position: absolute;
-              background: $defColor;
-              top: 0;
-              left: 50%;
-              transform: translateX(-50%);
-            }
-          }
-        }
-
-        .sns {
-          float: right;
-
-          >li {
-            float: left;
-            position: relative;
-
-            >a {
-              display: inline-block;
-              padding: 14px 20px;
-              font-size: 0;
-              padding: 14px 20px;
-              transition: 0.5s;
-              color: #ddd;
-
-              i {
-                font-size: 14px;
-              }
-
-              &::after {
-                content: '';
-                display: block;
-                width: 0%;
-                height: 5px;
-                background: $themeColor;
-                position: absolute;
-                bottom: -5px;
-                left: 50%;
-                transform: translateX(-50%);
-                transition: 0.5s;
-              }
-
-              &:hover {
-                &::after {
-                  width: 100%;
-                }
-              }
-            }
-          }
         }
       }
 
     }
 
-    .btnCall {
+  }
+
+  .btnCall {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 20px;
+    height: 20px;
+    display: none;
+
+    &::before,
+    &::after {
+      content: '';
       position: absolute;
-      right: 10px;
-      top: 50%;
-      transform: translateY(-50%);
-      width: 20px;
-      height: 20px;
-      display: none;
+      width: 100%;
+      height: 2px;
+      background: #fff;
+      left: 0;
+    }
 
-      &::before,
-      &::after {
-        content: '';
-        position: absolute;
-        width: 100%;
-        height: 2px;
-        background: #fff;
-        left: 0;
-      }
+    &::before {
+      top: 0;
+      transition: top 0.5s 0s, transform 0.5s 0.5s;
+    }
 
+    &::after {
+      bottom: 0;
+      transition: bottom 0.5s 0s, transform 0.5s 0.5s;
+    }
+
+    span {
+      width: 100%;
+      height: 2px;
+      background: #fff;
+      position: absolute;
+      top: calc(50% - 1px);
+      text-indent: -9999px;
+      transition: 0.5s 0.2s;
+    }
+
+    &.on {
       &::before {
-        top: 0;
-        transition: top 0.5s 0s, transform 0.5s 0.5s;
+        top: calc(50% - 1px);
+        transform: rotate(45deg);
       }
 
       &::after {
-        bottom: 0;
-        transition: bottom 0.5s 0s, transform 0.5s 0.5s;
+        bottom: calc(50% - 1px);
+        transform: rotate(-45deg);
       }
 
       span {
-        width: 100%;
-        height: 2px;
-        background: #fff;
-        position: absolute;
-        top: calc(50% - 1px);
-        text-indent: -9999px;
-        transition: 0.5s 0.2s;
-      }
-
-      &.on {
-        &::before {
-          top: calc(50% - 1px);
-          transform: rotate(45deg);
-        }
-
-        &::after {
-          bottom: calc(50% - 1px);
-          transform: rotate(-45deg);
-        }
-
-        span {
-          transform: translateX(100%);
-          opacity: 0;
-        }
-      }
-    }
-
-    .menuMo {
-      width: 270px;
-      height: 100vh;
-      padding: 35px 30px;
-      background: $defColor;
-      position: fixed;
-      top: 0;
-      left: -270px;
-      z-index: 10;
-      transition: 0.5s;
-
-      h1 {
-        border-bottom: 1px solid #FF2E63;
-
-        a {
-          display: block;
-          font: bold 24px/1 $fontTitle;
-          color: #fff;
-          text-align: center;
-          margin-bottom: 5px;
-        }
-
-        span {
-          display: block;
-          text-align: center;
-          font: 11px/1 $fontDef;
-          color: #ccc;
-          margin-bottom: 30px;
-        }
-      }
-
-      #gnbMo {
-        li a {
-          display: block;
-          width: 100%;
-          padding: 20px 0px;
-          text-align: center;
-          font: bold 14px/1 $fontDef;
-          color: #aaa;
-          transition: 0.5s;
-
-          &:hover {
-            background: $themeColor;
-            color: #fff;
-          }
-        }
-      }
-
-      &.on {
-        left: 0;
+        transform: translateX(100%);
+        opacity: 0;
       }
     }
   }
+
+  .menuMo {
+    width: 270px;
+    height: 100vh;
+    padding: 35px 30px;
+    background: $defColor;
+    position: fixed;
+    top: 0;
+    left: -270px;
+    z-index: 10;
+    transition: 0.5s;
+
+    h1 {
+      border-bottom: 1px solid #FF2E63;
+
+      a {
+        display: block;
+        font: bold 24px/1 $fontTitle;
+        color: #fff;
+        text-align: center;
+        margin-bottom: 5px;
+      }
+
+      span {
+        display: block;
+        text-align: center;
+        font: 11px/1 $fontDef;
+        color: #ccc;
+        margin-bottom: 30px;
+      }
+    }
+
+    #gnbMo {
+      li a {
+        display: block;
+        width: 100%;
+        padding: 20px 0px;
+        text-align: center;
+        font: bold 14px/1 $fontDef;
+        color: #aaa;
+        transition: 0.5s;
+
+        &:hover {
+          background: $themeColor;
+          color: #fff;
+        }
+      }
+    }
+
+    &.on {
+      left: 0;
+    }
+  }
 }
+
 
 /* tablet ------------------------- */
 @media screen and (max-width: $tablet) {
@@ -283,7 +213,7 @@
 
 /* mobile ------------------------- */
 @media screen and (max-width: $mobile) {
-#header {
+  #header {
     .inner {
       height: 60px;
 
